--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <input type="text" id="searchInput" placeholder="Ton fantasme (ex: amateur french bdsm)" autofocus />
   <button onclick="search()">Rechercher</button>
   <div id="status"></div>
+  <div id="results" style="margin: 40px auto; max-width: 1200px; padding: 0 10px;">
+  <!-- Les vidéos s'afficheront ici en grille -->
+</div>
 
   <div id="prefs">
     <h3>Préférences (local)</h3>
@@ -65,23 +68,85 @@
       }
     }
 
-    function search() {
-      let query = document.getElementById('searchInput').value.trim();
-      if (!query) return alert("Entre quelque chose !");
+    async function search() {
+  let query = document.getElementById('searchInput').value.trim();
+  if (!query) return alert("Entre un fantasme !");
 
-      let enhanced = query;
-      Object.entries(prefs).forEach(([tag, w]) => { if (w > 0) enhanced += ` ${tag}`; });
+  let enhanced = query;
+  Object.entries(prefs).forEach(([tag, w]) => { if (w > 0) enhanced += ` ${tag}`; });
 
-      const sites = [
-        {name: "ThisVid", url: `https://thisvid.com/search/?q=${encodeURIComponent(enhanced)}`},
-        {name: "DarknessPorn", url: `https://darknessporn.com/search/${encodeURIComponent(enhanced)}/`}
-      ];
+  const workerUrl = 'https://lust-engine-proxy.anonymesousanonymat.workers.dev/'; // CHANGE ÇA avec ton Worker URL
 
-      if (confirm(`Ouvrir sur ${sites.length} sites ?`)) {
-        sites.forEach(s => window.open(s.url, '_blank'));
-        document.getElementById('status').textContent = 'Boosts appliqués !';
-      }
-    }
+  showStatus('Recherche en cours...');
+
+  try {
+    // Fetch pour ThisVid
+    const resThis = await fetch(`${workerUrl}?q=${encodeURIComponent(enhanced)}&site=thisvid`);
+    const dataThis = await resThis.json();
+
+    // Fetch pour DarknessPorn
+    const resDark = await fetch(`${workerUrl}?q=${encodeURIComponent(enhanced)}&site=darknessporn`);
+    const dataDark = await resDark.json();
+    // ... après await resDark ...
+
+const combinedResults = [
+  ...(dataThis.results || []),
+  ...(dataDark.results || [])
+];
+
+// Optionnel : petit filtre ou sort basique si tu veux
+displayResults(combinedResults);
+
+    // Affiche grid
+    displayResults([...(dataThis.results || []), ...(dataDark.results || [])]);
+
+  } catch (e) {
+    showStatus('Erreur proxy : ' + e.message);
+  }
+}
+
+function displayResults(videos) {
+  const container = document.getElementById('results');
+  if (!container) {
+    console.error('Div #results introuvable');
+    return;
+  }
+
+  // Vide les anciens résultats pour éviter l'accumulation
+  container.innerHTML = '';
+
+  if (videos.length === 0) {
+    container.innerHTML = '<p style="color:#ff9800; font-size:18px;">Aucun résultat trouvé. Essaie d\'autres tags !</p>';
+    showStatus('Pas de vidéos extraites');
+    return;
+  }
+
+  let html = '<h2 style="text-align:center; color:#ff4081; margin-bottom:20px;">Résultats boostés</h2>';
+  html += '<div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); gap: 20px;">';
+
+  videos.forEach(v => {
+    // Sécurité : fallback si thumb ou title manquant
+    const thumb = v.thumb || 'https://via.placeholder.com/220x150?text=No+Thumb';
+    const title = v.title || 'Vidéo sans titre';
+    const link = v.link || '#';
+
+    html += `
+      <div style="background:#1a1a1a; border-radius:10px; overflow:hidden; box-shadow:0 4px 8px rgba(0,0,0,0.5);">
+        <a href="${link}" target="_blank" style="text-decoration:none; color:inherit; display:block;">
+          <img src="${thumb}" alt="${title}" style="width:100%; height:auto; display:block;" 
+               onerror="this.src='https://via.placeholder.com/220x150?text=Thumb+Error';">
+          <div style="padding:10px; font-size:14px; line-height:1.4;">
+            ${title}
+          </div>
+        </a>
+      </div>`;
+  });
+
+  html += '</div>';
+  container.innerHTML = html;
+
+  showStatus(`Affichage de ${videos.length} vidéos !`);
+}
 
     updateList();
   </script>
